Fix HTML encoding issues in index.html

--- a/en/index.html
+++ b/en/index.html
@@ -87,7 +87,7 @@
     <div class="heroLogo" role="img" aria-label="G2">
       <img class="heroLogoImg" src="../assets/brand/g2-mark.png" alt="G2" />
     </div>
-    <h1 class="fullCardTitle">G2 Solutions</h1>
+    <h1 class="fullCardTitle">G<span class="heroTwo">2</span> Solutions</h1>
     <p class="fullCardDesc">IT support, finance and training — straightforward, dependable and easy to work with.</p>
     <span class="heroBadge">IT support <span class="dot">•</span> Finance <span class="dot">•</span> Training</span>
   </div>
@@ -262,4 +262,5 @@
 </script>
 </body>
 </html>
+
 
