--- a/hr/index.html
+++ b/hr/index.html
@@ -86,7 +86,7 @@
 <div class="heroLogo" role="img" aria-label="G2">
   <img class="heroLogoImg" src="../assets/brand/g2-mark.png" alt="G2" />
 </div>
-    <h1 class="fullCardTitle">G2 Solutions</h1>
+    <h1 class="fullCardTitle">G<span class="heroTwo">2</span> Solutions</h1>
     <p class="fullCardDesc">IT podrška, financije i edukacije — jasno, pouzdano i bez kompliciranja.</p>
     <span class="heroBadge">IT podrška <span class="dot">•</span> Financije <span class="dot">•</span> Edukacija</span>
   </div>
@@ -246,4 +246,5 @@
 </script>
 </body>
 </html>
+
 
