--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@
   }
   h1 { font-size: 80px; margin: 0; color: #1D4ED8; letter-spacing: -0.04em; }
   p { font-size: 18px; color: #B8C3D9; margin: 10px 0 30px; }
+  .links { display: flex; gap: 16px; flex-wrap: wrap; justify-content: center; }
   a {
     color: #081023;
     background: linear-gradient(90deg, #6AA6FF, #7EE7E7, #91F7C2);
@@ -33,6 +34,9 @@
 <body>
   <h1>404</h1>
   <p>Page not found / Stranica nije pronađena</p>
-  <a href="../">Go Home / Naslovnica</a>
+  <div class="links">
+    <a href="./en/">English</a>
+    <a href="./hr/">Hrvatski</a>
+  </div>
 </body>
 </html>
