--- a/hr/404.html
+++ b/hr/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hr">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>404 — Page not found</title>
+<title>404 — Stranica nije pronađena</title>
 <meta name="robots" content="noindex"/>
 <style>
   body {
@@ -32,7 +32,7 @@
 </head>
 <body>
   <h1>404</h1>
-  <p>Page not found / Stranica nije pronađena</p>
-  <a href="../">Go Home / Naslovnica</a>
+  <p>Stranica nije pronađena</p>
+  <a href="../">Naslovnica</a>
 </body>
 </html>
