--- a/en/index.html
+++ b/en/index.html
@@ -87,7 +87,7 @@
 <section class="snapPage snapHero is-active">
   <div class="fullCard">
     <div class="heroLogo" role="img" aria-label="G2">
-      <img class="heroLogoImg" src="../assets/brand/g2-mark.png" alt="G2" />
+<img class="heroLogoImg" src="../assets/brand/g2-mark.webp" alt="G2" />
     </div>
     <h1 class="fullCardTitle">G<span class="heroTwo">2</span> Solutions</h1>
     <p class="fullCardDesc">IT support, finance and training — straightforward, dependable and easy to work with.</p>
