--- a/en/index.html
+++ b/en/index.html
@@ -28,7 +28,7 @@
   <link href="../favicon.ico" rel="icon"/>
   <link href="../apple-touch-icon.png" rel="apple-touch-icon"/>
     <link rel="preload" href="../assets/fonts/Inter-roman.var.woff2" as="font" type="font/woff2" crossorigin>
-<link href="../assets/site.css?v=4" rel="stylesheet"/>
+<link href="../assets/site.css?v=5" rel="stylesheet"/>
 
 <script type="application/ld+json">
   {
@@ -88,7 +88,7 @@
     <div class="heroLogo" role="img" aria-label="G2">
 <img class="heroLogoImg" src="../assets/brand/g2-mark.webp" alt="G2" />
     </div>
-    <h1 class="fullCardTitle">G<span class="heroTwo">2</span> Solutions</h1>
+    <h1 class="fullCardTitle heroTitle">G<span class="heroTwo">2</span> Solutions</h1>
     <p class="fullCardDesc">IT support, finance and training — straightforward, dependable and easy to work with.</p>
     <span class="heroBadge">IT support <span class="dot">•</span> Finance <span class="dot">•</span> Training</span>
   </div>
