--- a/hr/it-support/index.html
+++ b/hr/it-support/index.html
@@ -1,79 +1,185 @@
+<!DOCTYPE html>
 
-<section>
-  <h1>IT podrška za male i srednje tvrtke</h1>
-  <p>Proaktivno upravljanje IT sustavima za tvrtke od 10 i više zaposlenika — cloud okruženja, sigurnost i stabilna operativa bez potrebe za internim IT odjelom.</p>
+<html lang="hr">
+<head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>G2 Solutions — IT podrška</title>
+  <meta content="Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela." name="description"/>
+  <meta content="#0b1220" name="theme-color"/>
+  
+  <link href="https://pgrce.github.io/g2solutions/hr/it-support/" rel="canonical"/>
+  <link rel="alternate" hreflang="x-default" href="https://pgrce.github.io/g2solutions/en/" />
+  <link rel="alternate" hreflang="en" href="https://pgrce.github.io/g2solutions/en/it-support/" />
+  <link rel="alternate" hreflang="hr" href="https://pgrce.github.io/g2solutions/hr/it-support/" />
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pgrce.github.io/g2solutions/hr/it-support/">
+  <meta property="og:title" content="IT podrška — G2 Solutions">
+  <meta property="og:description" content="Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela.">
+  <meta property="og:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+  <meta property="og:locale" content="hr_HR" />
+  <meta property="og:locale:alternate" content="en_GB" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="IT podrška — G2 Solutions">
+  <meta name="twitter:description" content="Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela.">
+  <meta name="twitter:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+
+  <link href="../../favicon.ico" rel="icon"/>
+  <link href="../../apple-touch-icon.png" rel="apple-touch-icon"/>
+    <link rel="preload" href="../../assets/fonts/Inter-roman.var.woff2" as="font" type="font/woff2" crossorigin>
+<link href="../../assets/site.css?v=6" rel="stylesheet"/>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "IT podrška",
+    "provider": { "@id": "https://pgrce.github.io/g2solutions/#identity" },
+    "areaServed": {
+      "@type": "City",
+      "name": "Zagreb"
+    },
+    "description": "Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela."
+  }
+  </script>
+</head>
+<body class="subpage">
+<nav class="topbar" aria-label="Language">
+  <div class="lang">
+    <a aria-current="page" class="active" data-lang="hr" href="./">HR</a>
+    <a data-lang="en" href="../../en/it-support/">EN</a>
+  </div>
+</nav>
+<main class="wrap">
+
+<section class="subHead">
+  <a href="../" class="subHeadLogo" aria-label="G2 Solutions — Naslovnica">
+    <span class="heroG">G</span><span class="heroTwo">2</span>
+  </a>
+  <h1>IT podrška</h1>
+  <p>Proaktivno upravljanje IT-om za SME: cloud okruženja (Microsoft 365 / Google Workspace), sigurnost i pouzdan rad sustava — bez internog IT odjela.</p>
+</section>
+<section aria-label="Services list" class="serviceGrid">
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-blue"><use href="../../assets/icons/sprite.svg#computers"></use></svg>
+<div>
+<h3>Monitoring i incident response</h3>
+<p>Praćenje sustava, brzo rješavanje incidenata i jasna eskalacija.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-teal"><use href="../../assets/icons/sprite.svg#monitor"></use></svg>
+<div>
+<h3>Upravljanje uređajima (Windows/macOS)</h3>
+<p>Standardizacija, MDM/Intune, patching i lifecycle upravljanje.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-purple"><use href="../../assets/icons/sprite.svg#download"></use></svg>
+<div>
+<h3>Microsoft 365 / Google Workspace</h3>
+<p>Upravljanje okruženjem, korisnicima, licencama, pravilima i sigurnošću.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-green"><use href="../../assets/icons/sprite.svg#mail"></use></svg>
+<div>
+<h3>Identity, SSO i pristupi</h3>
+<p>MFA, pristupi i SSO integracije (Entra/Okta) za sigurniji rad.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-rose"><use href="../../assets/icons/sprite.svg#refresh"></use></svg>
+<div>
+<h3>Sigurnosna baza i hardening</h3>
+<p>Baseline postavke, policyji i hardening prema industrijskim praksama.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-sky"><use href="../../assets/icons/sprite.svg#userplus"></use></svg>
+<div>
+<h3>Onboarding/Offboarding procesi</h3>
+<p>Brz i siguran dolazak/odlazak: accounti, oprema, prava pristupa, revizijski trag.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-fuchsia"><use href="../../assets/icons/sprite.svg#monitor"></use></svg>
+<div>
+<h3>Backup & disaster recovery</h3>
+<p>Backup strategija, test restore, kontinuitet poslovanja i plan oporavka.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-amber"><use href="../../assets/icons/sprite.svg#pin"></use></svg>
+<div>
+<h3>Dokumentacija & IT standardi</h3>
+<p>Dokumentiran sustav, procedure i kvartalni pregled rizika i prioriteta.</p>
+</div>
+</div>
 </section>
 
-<section>
-  <h2>Vanjski IT odjel</h2>
-  <p>Preuzimamo odgovornost za cjelokupnu IT operativu:</p>
-  <ul>
-    <li>Upravljanje cloud okruženjima (Microsoft 365, Google Workspace i slični sustavi)</li>
-    <li>Standardizacija i upravljanje uređajima (Windows / macOS)</li>
-    <li>Sigurnosni baseline (MFA, kontrola pristupa, zaštita podataka)</li>
-    <li>Redovni patching i proaktivni monitoring</li>
-    <li>Backup i plan oporavka podataka</li>
-    <li>Onboarding i offboarding zaposlenika</li>
-  </ul>
-  <p>Cilj je stabilan, dokumentiran i predvidljiv IT sustav koji podržava rast tvrtke.</p>
+<section class="panel" aria-label="Migracije i tranzicije u cloud" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Migracije i tranzicije u cloud</h2>
+  <p class="p" style="margin:0 0 14px">Mnoge tvrtke još uvijek koriste zastarjele ili fragmentirane sustave (npr. cPanel mail, shared hosting rješenja ili nepovezane SaaS alate). Pomažemo u migracijama na Microsoft 365 ili Google Workspace, kao i u migracijama između ta dva okruženja — uz postavljanje sigurnosne strukture i standarda odmah nakon prijenosa.</p>
+  <div class="tags" aria-label="Tipične migracije">
+    <span class="tag">cPanel/hosting → cloud</span>
+    <span class="tag">M365 ↔ Google Workspace</span>
+    <span class="tag">Konsolidacija SaaS alata</span>
+    <span class="tag">Sigurnosna struktura</span>
+  </div>
 </section>
 
-<section>
-  <h2>Sigurnost i standardizacija</h2>
-  <p>IT bez jasnih standarda dugoročno postaje rizik.</p>
-  <ul>
-    <li>Postavljanje sigurnosnih pravila i kontrole pristupa</li>
-    <li>Hardening sustava prema industrijskim praksama</li>
-    <li>Usklađivanje sa sigurnosnim i ISO principima gdje je primjenjivo</li>
-    <li>Standardizacija alata i procesa</li>
-  </ul>
-  <p>Kada se dogodi problem, rješavamo ga. Nakon stabilizacije sustava, fokus se prebacuje na standardizaciju i dugoročnu održivost.</p>
+<section class="panel" aria-label="Model suradnje" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Model suradnje</h2>
+  <p class="p" style="margin:0 0 14px">Radimo kao vaš vanjski IT odjel: proaktivno, uz standarde i mjerljive procese. Podrška se pruža u dogovorenom radnom vremenu uz definirani SLA. 24/7 dežurstvo nije dio standardnog modela, ali se može definirati prema potrebi. Projektni angažmani (migracije, sigurnosni pregledi, krizne intervencije) mogu se realizirati zasebno ili kao uvod u dugoročnu suradnju.</p>
+  <div class="tags" aria-label="Ključne značajke">
+    <span class="tag">Mjesečni ugovor</span>
+    <span class="tag">SLA u radno vrijeme</span>
+    <span class="tag">Proaktivni monitoring</span>
+    <span class="tag">Dokumentacija</span>
+  </div>
 </section>
 
-<section>
-  <h2>Migracije i tranzicije u cloud</h2>
-  <p>Mnoge tvrtke još uvijek koriste zastarjele ili fragmentirane sustave — primjerice cPanel mail, shared hosting rješenja ili nepovezane SaaS alate.</p>
-  <ul>
-    <li>Migracije s hosting / cPanel mail sustava na Microsoft 365 ili Google Workspace</li>
-    <li>Migracije između Microsoft 365 i Google Workspace okruženja</li>
-    <li>Konsolidacija više SaaS alata u jedno upravljivo okruženje</li>
-    <li>Postavljanje sigurnosne strukture odmah nakon migracije</li>
-  </ul>
-  <p>Svaka migracija uključuje inicijalnu procjenu postojećeg stanja i preporuku optimalne strukture.</p>
+<section class="panel" aria-label="Za koga je" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Za koga je</h2>
+  <p class="p" style="margin:0 0 14px">Za tvrtke od 10+ zaposlenika koje koriste cloud alate poput Microsoft 365, Google Workspace ili kombinaciju više SaaS sustava te žele pouzdan, siguran i standardiziran IT — bez zapošljavanja internog IT odjela.</p>
+  <div class="tags" aria-label="Tipični scenariji">
+    <span class="tag">Skaliranje tima</span>
+    <span class="tag">Sigurnost i MFA</span>
+    <span class="tag">Kontrola troškova</span>
+    <span class="tag">Audit/ISO readiness</span>
+  </div>
 </section>
 
-<section>
-  <h2>Kontrola troškova i preglednost</h2>
-  <ul>
-    <li>Standardizacija licenci i alata</li>
-    <li>Eliminacija nepotrebnih pretplata</li>
-    <li>Planiranje infrastrukture i nabave</li>
-    <li>Predvidiv mjesečni model bez improvizacije</li>
-  </ul>
+<section class="panel" aria-label="Što dobivate" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Što dobivate</h2>
+  <p class="p" style="margin:0 0 14px">Fokus na rezultat: manje incidenata, jasna odgovornost i predvidiv model upravljanja IT-om.</p>
+  <div class="tags" aria-label="Ishodi">
+    <span class="tag">Manji operativni rizik</span>
+    <span class="tag">Standardiziran i dokumentiran IT</span>
+    <span class="tag">Sigurnosni baseline</span>
+    <span class="tag">Kontrola troškova</span>
+  </div>
 </section>
 
-<section>
-  <h2>Model suradnje</h2>
-  <ul>
-    <li>Ugovorni mjesečni model</li>
-    <li>Podrška tijekom dogovorenog radnog vremena uz definirani SLA</li>
-    <li>Proaktivno održavanje i planirane aktivnosti</li>
-    <li>Jasno dokumentirani sustavi i procesi</li>
-  </ul>
-  <p>Projektni angažmani (migracije, sigurnosni pregledi, krizne intervencije) mogu se realizirati zasebno ili kao uvod u dugoročnu suradnju.</p>
+<section class="panel cta" aria-label="Kontakt poziv na akciju" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Imate pitanje ili trebate podršku?</h2>
+  <p class="p" style="margin:0 0 14px">Pošaljite broj zaposlenika i kratko stanje sustava — odgovaramo unutar jednog radnog dana.</p>
+  <a class="btn" href="../?focus=contactName#contact">Zatraži IT pregled</a>
 </section>
+<footer class="footer">© 2026 G2 Solutions · <a href="mailto:info@g2core.hr">info@g2core.hr</a> · <a href="../privatnost/">Privatnost</a> · <a href="../impresum/">Impresum</a></footer>
+</main>
 
-<section>
-  <h2>Za koga je ova usluga</h2>
-  <ul>
-    <li>Tvrtke od 10+ zaposlenika</li>
-    <li>Cloud okruženja (Microsoft 365, Google Workspace i slična rješenja)</li>
-    <li>Organizacije bez internog IT odjela ili s potrebom za rasterećenjem postojećeg tima</li>
-    <li>Tvrtke koje žele dugoročnog IT partnera</li>
-  </ul>
-</section>
+<div class="floatMail" aria-label="Brzi kontakt">
+  <a href="../?focus=contactName#contact" title="Pošalji upit" aria-label="Pošalji upit" data-focus="contactName">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M4.5 7.5h15A2.5 2.5 0 0 1 22 10v8A2.5 2.5 0 0 1 19.5 20.5h-15A2.5 2.5 0 0 1 2 18v-8A2.5 2.5 0 0 1 4.5 7.5Z" stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
+      <path d="M3.2 9.2 12 14.6l8.8-5.4" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
+</div>
 
-<section>
-  <h2>Zatražite inicijalni IT pregled</h2>
-  <p>Pošaljite broj zaposlenika i kratak opis trenutnog IT okruženja — odgovaramo unutar jednog radnog dana.</p>
-</section>
+<script src="../../assets/js/subpage.js?v=1" defer></script>
+</body>
+</html>
