--- a/hr/o-nama/index.html
+++ b/hr/o-nama/index.html
@@ -1,42 +1,111 @@
+<!DOCTYPE html>
+<html lang="hr">
+<head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>G2 Solutions — O nama</title>
+  <meta content="G2 Solutions je strateški IT partner za SME: managed IT, Microsoft 365, sigurnost i standardi — uz enterprise iskustvo." name="description"/>
+  <meta content="#0b1220" name="theme-color"/>
+  
+  <link href="https://pgrce.github.io/g2solutions/hr/o-nama/" rel="canonical"/>
+  <link rel="alternate" hreflang="x-default" href="https://pgrce.github.io/g2solutions/en/" />
+  <link rel="alternate" hreflang="en" href="https://pgrce.github.io/g2solutions/en/about/" />
+  <link rel="alternate" hreflang="hr" href="https://pgrce.github.io/g2solutions/hr/o-nama/" />
 
-<section>
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pgrce.github.io/g2solutions/hr/o-nama/">
+  <meta property="og:title" content="O nama — G2 Solutions">
+  <meta property="og:description" content="G2 Solutions je strateški IT partner za SME: managed IT, Microsoft 365, sigurnost i standardi — uz enterprise iskustvo.">
+  <meta property="og:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+  <meta property="og:locale" content="hr_HR" />
+  <meta property="og:locale:alternate" content="en_GB" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="O nama — G2 Solutions">
+  <meta name="twitter:description" content="G2 Solutions je strateški IT partner za SME: managed IT, Microsoft 365, sigurnost i standardi — uz enterprise iskustvo.">
+  <meta name="twitter:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+
+  <link href="../../favicon.ico" rel="icon"/>
+  <link href="../../apple-touch-icon.png" rel="apple-touch-icon"/>
+    <link rel="preload" href="../../assets/fonts/Inter-roman.var.woff2" as="font" type="font/woff2" crossorigin>
+<link href="../../assets/site.css?v=6" rel="stylesheet"/>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AboutPage",
+    "mainEntity": { "@id": "https://pgrce.github.io/g2solutions/#identity" }
+  }
+  </script>
+</head>
+<body class="subpage">
+<nav class="topbar" aria-label="Language">
+  <div class="lang">
+    <a aria-current="page" class="active" data-lang="hr" href="./">HR</a>
+    <a data-lang="en" href="../../en/about/">EN</a>
+  </div>
+</nav>
+<main class="wrap">
+
+<section class="subHead">
+  <a href="../" class="subHeadLogo" aria-label="G2 Solutions — Naslovnica">
+    <span class="heroG">G</span><span class="heroTwo">2</span>
+  </a>
   <h1>O nama</h1>
-  <p>G2 Solutions pruža strukturirano upravljanje IT infrastrukturom za male i srednje tvrtke.</p>
-  <p>Pomažemo i u hitnim situacijama, ali dugoročno gradimo stabilan, siguran i predvidiv IT sustav koji smanjuje potrebu za kriznim intervencijama.</p>
+  <p>Iskustvo iz većih sustava preneseno u SME: cloud okruženja, sigurnost i pouzdana IT operativa.</p>
 </section>
 
-<section>
-  <h2>Iskustvo iza G2 Solutions</h2>
-  <p>G2 Solutions vodi IT profesionalac s više od 15 godina iskustva u upravljanju infrastrukturom, sigurnošću i operativnim IT sustavima.</p>
-  <ul>
-    <li>upravljanje flotom od 800+ uređaja u međunarodnim okruženjima</li>
-    <li>implementaciju i nadzor sigurnosnih standarda</li>
-    <li>ISO 27001 projekte i sigurnosne procese</li>
-    <li>dizajn managed service operativnih modela</li>
-    <li>Microsoft 365 i cloud tranzicije</li>
-  </ul>
-  <p>Iskustvo stečeno u većim sustavima prilagođeno je realnim potrebama hrvatskih SME tvrtki.</p>
+<section class="panel" aria-label="Tko smo" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Tko stoji iza G2 Solutions</h2>
+  <p class="p" style="margin:0 0 14px">G2 Solutions vodi IT profesionalac s 15+ godina iskustva u infrastrukturi, sigurnosti i operativnom IT-u u međunarodnom okruženju. Iskustvo uključuje dizajn managed service operativnih modela, upravljanje cloud okruženjima (Microsoft 365 / Google Workspace), implementaciju ISO 27001 te standardizaciju i optimizaciju troškova.</p>
+  <div class="tags" aria-label="Iskustvo">
+    <span class="tag">Managed Services</span>
+    <span class="tag">M365 / Google</span>
+    <span class="tag">Azure</span>
+    <span class="tag">ISO 27001</span>
+  </div>
 </section>
 
-<section>
-  <h2>Kako radimo</h2>
-  <p>Krizne situacije često su prvi kontakt s novim klijentima. Nakon stabilizacije sustava, fokus se prebacuje na standardizaciju, sigurnost i dugoročnu održivost.</p>
-  <ul>
-    <li>standardizacija alata i procesa</li>
-    <li>jasna dokumentacija</li>
-    <li>proaktivni monitoring</li>
-    <li>definirana pravila pristupa i sigurnosti</li>
-    <li>mjerljiva operativa</li>
-  </ul>
+<section class="panel" aria-label="Kako pomažemo" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Kako pomažemo</h2>
+  <p class="p" style="margin:0 0 14px">Radimo kao vaš vanjski IT odjel: rješavamo hitne situacije kada se dogode, stabiliziramo sustav i potom uvodimo standarde, proaktivni monitoring i sigurnosne prakse kako se problemi ne bi ponavljali. Fokus je na stabilnosti, sigurnosti i jasnoći — uz dokumentirane procese.</p>
+  <div class="tags" aria-label="Fokus">
+    <span class="tag">Stabilnost sustava</span>
+    <span class="tag">Sigurnost</span>
+    <span class="tag">Dokumentacija</span>
+    <span class="tag">Optimizacija troškova</span>
+  </div>
 </section>
 
-<section>
-  <h2>S kim radimo</h2>
-  <ul>
-    <li>tvrtke od 10 zaposlenika pa nadalje</li>
-    <li>cloud okruženja (Microsoft 365, Google Workspace i slična rješenja)</li>
-    <li>organizacije bez internog IT odjela ili s potrebom za rasterećenjem postojećeg tima</li>
-    <li>tvrtke koje žele dugoročnog IT partnera</li>
-  </ul>
-  <p>Uz dugoročne suradnje, realiziramo i projektne angažmane poput migracija, sigurnosnih pregleda i restrukturiranja IT sustava.</p>
+<section class="panel" aria-label="Za koga radimo" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Za koga radimo</h2>
+  <p class="p" style="margin:0 0 14px">Najčešće radimo s tvrtkama od 10+ zaposlenika koje koriste cloud alate poput Microsoft 365, Google Workspace ili kombinaciju više SaaS sustava te trebaju pouzdanog IT partnera — bez zapošljavanja internog IT odjela. Uz dugoročne suradnje, realiziramo i projektne angažmane poput migracija, sigurnosnih pregleda i kriznih intervencija.</p>
+  <div class="tags" aria-label="Tipični klijenti">
+    <span class="tag">Uslužne djelatnosti</span>
+    <span class="tag">Tech & agencije</span>
+    <span class="tag">Zdravstvo / medtech</span>
+    <span class="tag">Scale-up timovi</span>
+  </div>
 </section>
+
+<section class="panel cta" aria-label="Kontakt poziv na akciju" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Imate pitanje ili trebate podršku?</h2>
+  <p class="p" style="margin:0 0 14px">Pošaljite broj zaposlenika i kratko stanje sustava — odgovaramo unutar jednog radnog dana.</p>
+  <a class="btn" href="../?focus=contactName#contact">Zatraži IT pregled</a>
+</section>
+
+<footer class="footer">© 2026 G2 Solutions · <a href="mailto:info@g2core.hr">info@g2core.hr</a> · <a href="../privatnost/">Privatnost</a> · <a href="../impresum/">Impresum</a></footer>
+</main>
+
+<div class="floatMail" aria-label="Brzi kontakt">
+  <a href="../?focus=contactName#contact" title="Pošalji upit" aria-label="Pošalji upit" data-focus="contactName">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M4.5 7.5h15A2.5 2.5 0 0 1 22 10v8A2.5 2.5 0 0 1 19.5 20.5h-15A2.5 2.5 0 0 1 2 18v-8A2.5 2.5 0 0 1 4.5 7.5Z" stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
+      <path d="M3.2 9.2 12 14.6l8.8-5.4" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
+</div>
+
+<script src="../../assets/js/subpage.js?v=1" defer></script>
+</body>
+</html>
