Revise 'O nama' and 'IT podrška' pages for clarity and engagement, enhancing content structure, SEO, and user interaction

--- a/en/it-support/index.html
+++ b/en/it-support/index.html
@@ -1,1 +1,193 @@
-<h1>IT Support</h1><p>Premium managed IT for SMEs.</p>
+<!DOCTYPE html>
+
+<html lang="en-GB">
+<head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>G2 Solutions — IT Support</title>
+  <meta content="Managed IT for SMEs: Microsoft 365, security, monitoring, patching and backup — without an in-house IT team." name="description"/>
+  <meta content="#0b1220" name="theme-color"/>
+  
+  <link href="https://pgrce.github.io/g2solutions/en/it-support/" rel="canonical"/>
+  <link rel="alternate" hreflang="x-default" href="https://pgrce.github.io/g2solutions/en/" />
+  <link rel="alternate" hreflang="en" href="https://pgrce.github.io/g2solutions/en/it-support/" />
+  <link rel="alternate" hreflang="hr" href="https://pgrce.github.io/g2solutions/hr/it-support/" />
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pgrce.github.io/g2solutions/en/it-support/">
+  <meta property="og:title" content="IT Support — G2 Solutions">
+  <meta property="og:description" content="Managed IT for SMEs: Microsoft 365, security, monitoring, patching and backup — without an in-house IT team.">
+  <meta property="og:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:locale:alternate" content="hr_HR" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="IT Support — G2 Solutions">
+  <meta name="twitter:description" content="Managed IT for SMEs: Microsoft 365, security, monitoring, patching and backup — without an in-house IT team.">
+  <meta name="twitter:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+
+  <link href="../../favicon.ico" rel="icon"/>
+  <link href="../../apple-touch-icon.png" rel="apple-touch-icon"/>
+    <link rel="preload" href="../../assets/fonts/Inter-roman.var.woff2" as="font" type="font/woff2" crossorigin>
+<link href="../../assets/site.css?v=6" rel="stylesheet"/>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "IT Support",
+    "provider": { "@id": "https://pgrce.github.io/g2solutions/#identity" },
+    "areaServed": {
+      "@type": "City",
+      "name": "Zagreb"
+    },
+    "description": "Managed IT for SMEs: Microsoft 365, security, monitoring, patching and backup — without an in-house IT team."
+  }
+  </script>
+</head>
+<body class="subpage">
+<nav class="topbar" aria-label="Language">
+  <div class="lang">
+    <a data-lang="hr" href="../../hr/it-support/">HR</a>
+    <a aria-current="page" class="active" data-lang="en" href="./">EN</a>
+  </div>
+</nav>
+<main class="wrap">
+
+<section class="subHead">
+  <a href="../" class="subHeadLogo" aria-label="G2 Solutions — Home">
+    <span class="heroG">G</span><span class="heroTwo">2</span>
+  </a>
+  <h1>IT Support</h1>
+  <p>Proactive managed IT for SMEs: Microsoft 365, security and reliable operations — without an in-house IT team.</p>
+</section>
+<section aria-label="Services list" class="serviceGrid">
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-blue"><use href="../../assets/icons/sprite.svg#computers"></use></svg>
+<div>
+<h3>Helpdesk &amp; Troubleshooting</h3>
+<p>Fast help for everyday issues, remote or on‑site.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-teal"><use href="../../assets/icons/sprite.svg#monitor"></use></svg>
+<div>
+<h3>Device Provisioning</h3>
+<p>New devices, migrations and standardized baselines.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-purple"><use href="../../assets/icons/sprite.svg#download"></use></svg>
+<div>
+<h3>Software Installation</h3>
+<p>Standard tools, licensing, access policies and configuration.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-green"><use href="../../assets/icons/sprite.svg#mail"></use></svg>
+<div>
+<h3>Email &amp; Collaboration</h3>
+<p>Microsoft 365 / Google Workspace setup, migration and cleanup.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-rose"><use href="../../assets/icons/sprite.svg#refresh"></use></svg>
+<div>
+<h3>Updates &amp; Maintenance</h3>
+<p>Proactive patching, monitoring and operational hygiene.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-sky"><use href="../../assets/icons/sprite.svg#userplus"></use></svg>
+<div>
+<h3>User Onboarding/Offboarding</h3>
+<p>Accounts, access and equipment when people join/leave.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-fuchsia"><use href="../../assets/icons/sprite.svg#monitor"></use></svg>
+<div>
+<h3>Remote Support</h3>
+<p>Quick fixes without waiting for a visit.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-amber"><use href="../../assets/icons/sprite.svg#pin"></use></svg>
+<div>
+<h3>On‑site Support (Zagreb)</h3>
+<p>When on-site work is needed — we come to you.</p>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-amber"><use href="../../assets/icons/sprite.svg#tag"></use></svg>
+<div>
+<h3>Procurement &amp; Licensing</h3>
+<p>Hardware, networking equipment, software and licenses — sourcing, standardization and cost optimization.</p>
+</div>
+</div>
+</div>
+</div>
+</section>
+
+<section class="panel" aria-label="Migrations" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Migrations & cloud transitions</h2>
+  <p class="p" style="margin:0 0 14px">Many SMEs still run legacy or fragmented setups — e.g., cPanel/hosting email, shared hosting solutions or scattered SaaS tools. We help move to a structured cloud environment.</p>
+  <div class="tags" aria-label="Migration scenarios">
+    <span class="tag">cPanel/hosting → cloud</span>
+    <span class="tag">Microsoft 365 ↔ Google Workspace</span>
+    <span class="tag">SaaS consolidation</span>
+    <span class="tag">Security baseline</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="Engagement model" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Engagement model</h2>
+  <p class="p" style="margin:0 0 14px">We operate as your external IT department: proactive, standardized and measurable. In this phase, support is primarily delivered during business hours under a defined SLA.</p>
+  <div class="tags" aria-label="Highlights">
+    <span class="tag">Monthly retainer</span>
+    <span class="tag">Business-hours SLA</span>
+    <span class="tag">Proactive monitoring</span>
+    <span class="tag">Documentation</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="What you gain" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">What you gain</h2>
+  <p class="p" style="margin:0 0 14px">Outcomes we focus on: fewer incidents, clear ownership and predictable monthly IT.</p>
+  <div class="tags" aria-label="Outcomes">
+    <span class="tag">Reduced operational risk</span>
+    <span class="tag">Standardized & documented IT</span>
+    <span class="tag">Security baseline (MFA, access)</span>
+    <span class="tag">Cost control & license hygiene</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="Who it’s for" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Who it’s for</h2>
+  <p class="p" style="margin:0 0 14px">For companies with 10+ employees using cloud tools like Microsoft 365, Google Workspace or a mix of SaaS systems — looking for reliable, secure and standardized IT without building an in-house IT team.</p>
+  <div class="tags" aria-label="Typical needs">
+    <span class="tag">Scaling teams</span>
+    <span class="tag">Security & MFA</span>
+    <span class="tag">Cost control</span>
+    <span class="tag">Audit/ISO readiness</span>
+  </div>
+</section>
+
+<section class="panel cta" aria-label="Contact call to action" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Have a question or need support?</h2>
+  <p class="p" style="margin:0 0 14px">Share your company size and a short description of your setup — we’ll respond within one business day.</p>
+  <a class="btn" href="../?focus=contactName#contact">Request IT review</a>
+</section>
+<footer class="footer">© 2026 G2 Solutions · <a href="mailto:info@g2core.hr">info@g2core.hr</a> · <a href="../privacy/">Privacy</a> · <a href="../legal/">Legal</a></footer>
+</main>
+
+<div class="floatMail" aria-label="Quick email shortcut">
+  <a href="../?focus=contactName#contact" title="Send an enquiry" aria-label="Send an enquiry" data-focus="contactName">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M4.5 7.5h15A2.5 2.5 0 0 1 22 10v8A2.5 2.5 0 0 1 19.5 20.5h-15A2.5 2.5 0 0 1 2 18v-8A2.5 2.5 0 0 1 4.5 7.5Z" stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
+      <path d="M3.2 9.2 12 14.6l8.8-5.4" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
+</div>
+
+<script src="../../assets/js/subpage.js?v=1" defer></script>
+</body>
+</html>
