--- a/hr/it-support/index.html
+++ b/hr/it-support/index.html
@@ -1,1 +1,192 @@
-<h1>IT podrška</h1><p>Premium managed IT za SME.</p>
+<!DOCTYPE html>
+
+<html lang="hr">
+<head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>G2 Solutions — IT podrška</title>
+  <meta content="Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela." name="description"/>
+  <meta content="#0b1220" name="theme-color"/>
+  
+  <link href="https://pgrce.github.io/g2solutions/hr/it-support/" rel="canonical"/>
+  <link rel="alternate" hreflang="x-default" href="https://pgrce.github.io/g2solutions/en/" />
+  <link rel="alternate" hreflang="en" href="https://pgrce.github.io/g2solutions/en/it-support/" />
+  <link rel="alternate" hreflang="hr" href="https://pgrce.github.io/g2solutions/hr/it-support/" />
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pgrce.github.io/g2solutions/hr/it-support/">
+  <meta property="og:title" content="IT podrška — G2 Solutions">
+  <meta property="og:description" content="Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela.">
+  <meta property="og:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+  <meta property="og:locale" content="hr_HR" />
+  <meta property="og:locale:alternate" content="en_GB" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="IT podrška — G2 Solutions">
+  <meta name="twitter:description" content="Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela.">
+  <meta name="twitter:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+
+  <link href="../../favicon.ico" rel="icon"/>
+  <link href="../../apple-touch-icon.png" rel="apple-touch-icon"/>
+    <link rel="preload" href="../../assets/fonts/Inter-roman.var.woff2" as="font" type="font/woff2" crossorigin>
+<link href="../../assets/site.css?v=6" rel="stylesheet"/>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "IT podrška",
+    "provider": { "@id": "https://pgrce.github.io/g2solutions/#identity" },
+    "areaServed": {
+      "@type": "City",
+      "name": "Zagreb"
+    },
+    "description": "Managed IT za male i srednje tvrtke: Microsoft 365, sigurnost, monitoring, patching i backup — bez internog IT odjela."
+  }
+  </script>
+</head>
+<body class="subpage">
+<nav class="topbar" aria-label="Language">
+  <div class="lang">
+    <a aria-current="page" class="active" data-lang="hr" href="./">HR</a>
+    <a data-lang="en" href="../../en/it-support/">EN</a>
+  </div>
+</nav>
+<main class="wrap">
+
+<section class="subHead">
+  <a href="../" class="subHeadLogo" aria-label="G2 Solutions — Naslovnica">
+    <span class="heroG">G</span><span class="heroTwo">2</span>
+  </a>
+  <h1>IT podrška</h1>
+  <p>Proaktivno upravljanje IT-om za SME: cloud okruženja (Microsoft 365 / Google Workspace), sigurnost i pouzdan rad sustava — bez internog IT odjela.</p>
+</section>
+<section aria-label="Services list" class="serviceGrid">
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-blue"><use href="../../assets/icons/sprite.svg#computers"></use></svg>
+<div>
+<h3>Monitoring i incident response</h3>
+<p>Praćenje sustava, brzo rješavanje incidenata i jasna eskalacija.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-teal"><use href="../../assets/icons/sprite.svg#monitor"></use></svg>
+<div>
+<h3>Upravljanje uređajima (Windows/macOS)</h3>
+<p>Standardizacija, patching i upravljanje uređajima kroz životni ciklus.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-purple"><use href="../../assets/icons/sprite.svg#download"></use></svg>
+<div>
+<h3>Microsoft 365 / Google Workspace</h3>
+<p>Upravljanje okruženjem, korisnicima, licencama, pravilima i sigurnošću.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-green"><use href="../../assets/icons/sprite.svg#mail"></use></svg>
+<div>
+<h3>Identity, SSO i pristupi</h3>
+<p>MFA, kontrola pristupa i SSO — uz jasna pravila i revizijski trag.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-rose"><use href="../../assets/icons/sprite.svg#refresh"></use></svg>
+<div>
+<h3>Sigurnosna baza i hardening</h3>
+<p>Baseline postavke, policyji i hardening prema industrijskim praksama.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-sky"><use href="../../assets/icons/sprite.svg#userplus"></use></svg>
+<div>
+<h3>Onboarding/Offboarding procesi</h3>
+<p>Brz i siguran dolazak/odlazak: accounti, oprema, prava pristupa, revizijski trag.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-fuchsia"><use href="../../assets/icons/sprite.svg#monitor"></use></svg>
+<div>
+<h3>Backup & disaster recovery</h3>
+<p>Backup strategija, test restore, kontinuitet poslovanja i plan oporavka.</p>
+</div>
+</div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-amber"><use href="../../assets/icons/sprite.svg#pin"></use></svg>
+<div>
+<div class="serviceItem">
+<svg aria-hidden="true" class="icon tone-amber"><use href="../../assets/icons/sprite.svg#tag"></use></svg>
+<div>
+<h3>Nabava opreme i licenci</h3>
+<p>Računalna i mrežna oprema, software i licence — nabava, standardizacija i optimizacija troškova.</p>
+</div>
+</div>
+<h3>Dokumentacija & IT standardi</h3>
+<p>Dokumentiran sustav, procedure i kvartalni pregled rizika i prioriteta.</p>
+</div>
+</div>
+</section>
+
+<section class="panel" aria-label="Migracije i tranzicije u cloud" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Migracije i tranzicije u cloud</h2>
+  <p class="p" style="margin:0 0 14px">Mnoge tvrtke još uvijek koriste zastarjele ili fragmentirane sustave (npr. cPanel mail, shared hosting rješenja ili nepovezane SaaS alate). Pomažemo u migracijama na Microsoft 365 ili Google Workspace, kao i u migracijama između ta dva okruženja — uz postavljanje sigurnosne strukture i standarda odmah nakon prijenosa.</p>
+  <div class="tags" aria-label="Tipične migracije">
+    <span class="tag">cPanel/hosting → cloud</span>
+    <span class="tag">M365 ↔ Google Workspace</span>
+    <span class="tag">Konsolidacija SaaS alata</span>
+    <span class="tag">Sigurnosna struktura</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="Model suradnje" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Model suradnje</h2>
+  <p class="p" style="margin:0 0 14px">Radimo kao vaš vanjski IT odjel: proaktivno, uz standarde i mjerljive procese. Podrška se pruža u dogovorenom radnom vremenu uz definirani SLA. 24/7 dežurstvo nije dio standardnog modela, ali se može definirati prema potrebi. Projektni angažmani (migracije, sigurnosni pregledi, krizne intervencije) mogu se realizirati zasebno ili kao uvod u dugoročnu suradnju.</p>
+  <div class="tags" aria-label="Ključne značajke">
+    <span class="tag">Mjesečni ugovor</span>
+    <span class="tag">SLA u radno vrijeme</span>
+    <span class="tag">Proaktivni monitoring</span>
+    <span class="tag">Dokumentacija</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="Što dobivate" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Što dobivate</h2>
+  <p class="p" style="margin:0 0 14px">Fokus na rezultat: manje incidenata, jasna odgovornost i predvidiv model upravljanja IT-om.</p>
+  <div class="tags" aria-label="Ishodi">
+    <span class="tag">Manji operativni rizik</span>
+    <span class="tag">Standardiziran i dokumentiran IT</span>
+    <span class="tag">Sigurnosni baseline</span>
+    <span class="tag">Kontrola troškova</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="Za koga je" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Za koga je</h2>
+  <p class="p" style="margin:0 0 14px">Za tvrtke od 10+ zaposlenika koje koriste cloud alate poput Microsoft 365, Google Workspace ili kombinaciju više SaaS sustava te žele pouzdan, siguran i standardiziran IT — bez zapošljavanja internog IT odjela.</p>
+  <div class="tags" aria-label="Tipični scenariji">
+    <span class="tag">Skaliranje tima</span>
+    <span class="tag">Sigurnost i MFA</span>
+    <span class="tag">Kontrola troškova</span>
+    <span class="tag">Audit/ISO readiness</span>
+  </div>
+</section>
+
+<section class="panel cta" aria-label="Kontakt poziv na akciju" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Imate pitanje ili trebate podršku?</h2>
+  <p class="p" style="margin:0 0 14px">Pošaljite broj zaposlenika i kratko stanje sustava — odgovaramo unutar jednog radnog dana.</p>
+  <a class="btn" href="../?focus=contactName#contact">Zatraži IT pregled</a>
+</section>
+<footer class="footer">© 2026 G2 Solutions · <a href="mailto:info@g2core.hr">info@g2core.hr</a> · <a href="../privatnost/">Privatnost</a> · <a href="../impresum/">Impresum</a></footer>
+</main>
+
+<div class="floatMail" aria-label="Brzi kontakt">
+  <a href="../?focus=contactName#contact" title="Pošalji upit" aria-label="Pošalji upit" data-focus="contactName">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M4.5 7.5h15A2.5 2.5 0 0 1 22 10v8A2.5 2.5 0 0 1 19.5 20.5h-15A2.5 2.5 0 0 1 2 18v-8A2.5 2.5 0 0 1 4.5 7.5Z" stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
+      <path d="M3.2 9.2 12 14.6l8.8-5.4" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
+</div>
+
+<script src="../../assets/js/subpage.js?v=1" defer></script>
+</body>
+</html>
