--- a/en/about/index.html
+++ b/en/about/index.html
@@ -1,6 +1,111 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>G2 Solutions — About</title>
+  <meta content="G2 Solutions is a strategic IT partner for SMEs: managed IT, Microsoft 365, security and standards — backed by enterprise experience." name="description"/>
+  <meta content="#0b1220" name="theme-color"/>
+  
+  <link href="https://pgrce.github.io/g2solutions/en/about/" rel="canonical"/>
+  <link rel="alternate" hreflang="x-default" href="https://pgrce.github.io/g2solutions/en/" />
+  <link rel="alternate" hreflang="en" href="https://pgrce.github.io/g2solutions/en/about/" />
+  <link rel="alternate" hreflang="hr" href="https://pgrce.github.io/g2solutions/hr/o-nama/" />
 
-<h1>About</h1>
-<p>Senior IT professional with 20+ years of experience in infrastructure, security and cloud environments.</p>
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pgrce.github.io/g2solutions/en/about/">
+  <meta property="og:title" content="About — G2 Solutions">
+  <meta property="og:description" content="G2 Solutions is a strategic IT partner for SMEs: managed IT, Microsoft 365, security and standards — backed by enterprise experience.">
+  <meta property="og:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:locale:alternate" content="hr_HR" />
 
-<p>Experience also includes IT cost optimization in international environments, where standardization and vendor negotiations resulted in substantial annual savings.</p>
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About — G2 Solutions">
+  <meta name="twitter:description" content="G2 Solutions is a strategic IT partner for SMEs: managed IT, Microsoft 365, security and standards — backed by enterprise experience.">
+  <meta name="twitter:image" content="https://pgrce.github.io/g2solutions/assets/og-image.png">
 
+  <link href="../../favicon.ico" rel="icon"/>
+  <link href="../../apple-touch-icon.png" rel="apple-touch-icon"/>
+    <link rel="preload" href="../../assets/fonts/Inter-roman.var.woff2" as="font" type="font/woff2" crossorigin>
+<link href="../../assets/site.css?v=6" rel="stylesheet"/>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AboutPage",
+    "mainEntity": { "@id": "https://pgrce.github.io/g2solutions/#identity" }
+  }
+  </script>
+</head>
+<body class="subpage">
+<nav class="topbar" aria-label="Language">
+  <div class="lang">
+    <a data-lang="hr" href="../../hr/o-nama/">HR</a>
+    <a aria-current="page" class="active" data-lang="en" href="./">EN</a>
+  </div>
+</nav>
+<main class="wrap">
+
+<section class="subHead">
+  <a href="../" class="subHeadLogo" aria-label="G2 Solutions — Home">
+    <span class="heroG">G</span><span class="heroTwo">2</span>
+  </a>
+  <h1>About</h1>
+  <p>Enterprise-grade managed services experience in Microsoft 365/Azure and security — structured, practical and measurable.</p>
+</section>
+
+<section class="panel" aria-label="Who we are" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Who’s behind G2 Solutions</h2>
+  <p class="p" style="margin:0 0 14px">G2 Solutions is led by an IT professional with 20+ years of experience in infrastructure, security and international IT operations. Experience spans managed service operating models, Microsoft 365 administration, ISO 27001 implementation, and cost optimization through standardization. Experience also includes IT cost optimization in international environments, where standardization and vendor negotiations resulted in substantial annual savings.</p>
+  <div class="tags" aria-label="Experience">
+    <span class="tag">Managed Services</span>
+    <span class="tag">M365 / Google</span>
+    <span class="tag">Azure</span>
+    <span class="tag">ISO 27001</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="How we help" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">How we help</h2>
+  <p class="p" style="margin:0 0 14px">Urgent situations are often the first engagement. After stabilizing systems, we implement standards, proactive monitoring and security practices to prevent repeat incidents — backed by documented processes.</p>
+  <div class="tags" aria-label="Focus">
+    <span class="tag">Reliability</span>
+    <span class="tag">Security</span>
+    <span class="tag">Documentation</span>
+    <span class="tag">Cost optimization</span>
+  </div>
+</section>
+
+<section class="panel" aria-label="Who we work with" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Who we work with</h2>
+  <p class="p" style="margin:0 0 14px">Most often, we work with SMEs (15–50 employees) on Microsoft 365 that need a reliable IT partner — without building an internal IT department.</p>
+  <div class="tags" aria-label="Typical clients">
+    <span class="tag">Professional services</span>
+    <span class="tag">Tech & agencies</span>
+    <span class="tag">Healthcare / medtech</span>
+    <span class="tag">Scale-ups</span>
+  </div>
+</section>
+
+<section class="panel cta" aria-label="Contact call to action" style="margin-top:16px">
+  <h2 class="h1" style="font-size:20px;margin:0 0 8px">Have a question or need support?</h2>
+  <p class="p" style="margin:0 0 14px">Share your company size and a short description of your setup — we’ll respond within one business day.</p>
+  <a class="btn" href="../?focus=contactName#contact">Request IT review</a>
+</section>
+
+<footer class="footer">© 2026 G2 Solutions · <a href="mailto:info@g2core.hr">info@g2core.hr</a> · <a href="../privacy/">Privacy</a> · <a href="../legal/">Legal</a></footer>
+</main>
+
+<div class="floatMail" aria-label="Quick email shortcut">
+  <a href="../?focus=contactName#contact" title="Send an enquiry" aria-label="Send an enquiry" data-focus="contactName">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M4.5 7.5h15A2.5 2.5 0 0 1 22 10v8A2.5 2.5 0 0 1 19.5 20.5h-15A2.5 2.5 0 0 1 2 18v-8A2.5 2.5 0 0 1 4.5 7.5Z" stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
+      <path d="M3.2 9.2 12 14.6l8.8-5.4" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
+</div>
+
+<script src="../../assets/js/subpage.js?v=1" defer></script>
+</body>
+</html>
